# AgentVibes

./: .env.example  .gitignore  .mcp-minimal.json  .mcp.json  .npmignore  .sonarcloud-app-disable.md  .sonarcloud-dashboard-guide.md  .sonarcloud-quality-gate.md  .test-bmad-config  ATTRIBUTION.md  AUDIO_TUNNEL_FIX_SUMMARY.md  AUTO-DOWNLOAD-BEHAVIOR.md  AgentVibes.code-workspace  BMAD_PR_TESTING_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  INSTALL_MCP_WINDOWS.md  LICENSE  NOTICE  README.md  README.md.backup  RELEASE_NOTES.md  RELEASE_NOTES_SSH_REMOTE.md  RELEASE_NOTES_V2.md  RELEASE_NOTES_v2.0.17_DRAFT.md  RELEASE_NOTES_v2.5.0.md  RELEASE_PROCESS.md  SECURITY.md  WINDOWS-SETUP.md  claude-commands  claude-hooks  cleanup.sh  demo-script.txt  docker-volumes-report.md  download-piper-voices.ps1  ecosystem.config.cjs  fix-vscode-colors.sh  fixcolors  generate-all-agent-voices.sh  (+31 more)
.claude/: activation-instructions  language-voices.yaml  personality-voice-defaults.json  settings.json  tts-voice.txt
.clawdbot/: README.md
.github/: FUNDING.yml  MACOS_TESTING_QUICKSTART.md  (+2 more)
mcp-server/: .gitignore  QUICK_START.md  README.md  WINDOWS_SETUP.md  install-deps.js  pyproject.toml  requirements.txt  server.py  test_server.py
mcp-server/bmad-bundles/: VOICE_MAPPINGS.md
mcp-server/docs/: elevenlabs-setup.md  troubleshooting-audio.md
mcp-server/examples/: claude_desktop_config.json  claude_desktop_config_piper.json  custom_instructions.md
mcp-server/voices/: 16Speakers.onnx.json  README.md  jenny.onnx.json  kristin.onnx.json  preview-16speakers.sh
(+353 files in other folders)
